--- a/app/src/main/res/layout/activity_upload_pet.xml
+++ b/app/src/main/res/layout/activity_upload_pet.xml
@@ -181,12 +181,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
                 <ImageView
                     android:id="@+id/input_pet_image"
                     android:layout_width="100dp"
                     android:layout_height="85dp"
-                    android:src="@mipmap/c"/>
+                    android:src="@mipmap/placeholder"/>
                 <Button
                     android:id="@+id/choose_image_btn"
                     android:layout_width="wrap_content"
@@ -195,11 +196,29 @@
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/colorWhite"
                     android:padding="10dp"
-                    android:layout_marginStart="5dp"
+                    android:layout_marginStart="15dp"
                     android:layout_gravity="bottom"
                     android:text="Choose Image"/>
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/save_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_save"
+            app:elevation="8dp"
+            android:backgroundTint="@color/colorPrimary"
+            app:borderWidth="0dp"
+            app:fabSize="normal"/>
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
